# NewMate

./: .gitignore  .gitmodules  README.md  flake.nix  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0whsnwhswhqvihw7z2pjflp6hwh25956-source  ab1drwgd13z264x1wl07q12b66x7r8fr-source  nd991givbvmr0dp0hzm2kkliafgn2vg8-source  w91jm75swsv92k3x8i8prilmr1xsv2jy-source  wwriqwpwkd0lwwm7cw8ipvidcbri2y2g-source
